# 001-basic-multiagenty

./: .env.example  001-basic-multiagent.py  pyproject.toml  zzz-nb001-basic-multi-agent.ipynb
.ipynb_checkpoints/: zzz-nb001-basic-multi-agent-checkpoint.ipynb
