[tool.poetry]
name = "001-basic-multiagenty"
version = "0.1.0"
description = ""
authors = ["julio colomer <info@aiaccelera.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
langchain = "^0.1.16"
langgraph = "^0.0.38"
langchain-openai = "^0.1.3"
jupyterlab = "^4.2.4"
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
